[gd_scene load_steps=19 format=2]

[ext_resource path="res://House Furniture/Bed.tscn" type="PackedScene" id=1]
[ext_resource path="res://House Furniture/Table.tscn" type="PackedScene" id=2]
[ext_resource path="res://House Furniture/Bookcase.tscn" type="PackedScene" id=3]
[ext_resource path="res://House Furniture/Cabinet.tscn" type="PackedScene" id=4]
[ext_resource path="res://House Furniture/Chair.tscn" type="PackedScene" id=5]
[ext_resource path="res://House Furniture/Couch.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/House Stuff/house.tscn" type="PackedScene" id=7]
[ext_resource path="res://House Furniture/FurnitureManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://House Furniture/Furniture.gd" type="Script" id=9]
[ext_resource path="res://House Furniture/MapButton.gd" type="Script" id=10]
[ext_resource path="res://House Furniture/FurnishedHouse.gd" type="Script" id=11]
[ext_resource path="res://Fonts/buttonFontCardsSmaller.tres" type="DynamicFont" id=12]
[ext_resource path="res://Fotos/progressBar.png" type="Texture" id=13]
[ext_resource path="res://Assets/Characters/Chad/chad_round.png" type="Texture" id=14]
[ext_resource path="res://Fotos/MapButton.png" type="Texture" id=15]
[ext_resource path="res://Fotos/progressBarOver.png" type="Texture" id=16]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=2]
background_mode = 3
background_sky = SubResource( 1 )
background_color = Color( 0.635294, 0.6, 0.54902, 1 )

[node name="FurnishedHouse" type="Spatial"]
script = ExtResource( 11 )
availableFurniture = [ "Bed", "Chair", "Cabinet", "Bookcase", "Couch", "Table" ]

[node name="house" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.999986, -0.00525342, 0, 0.00525342, 0.999986, 0, 0, 0, 1, 0.127869, -0.105949, 0.0625839 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 20.3708, 23.0421, -3.07204 )
visible = false
light_energy = 1.3
shadow_bias = 2.0
spot_range = 100.6
spot_attenuation = 0.993345
spot_angle = 93.1
spot_angle_attenuation = 4.92458

[node name="SpotLight3" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 20.3708, 43.7946, -3.07204 )
light_energy = 1.3
shadow_bias = 2.0
spot_range = 42.111
spot_attenuation = 0.993345
spot_angle = 70.3125
spot_angle_attenuation = 4.92458

[node name="SpotLight5" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 20.3708, 65.6259, -3.07204 )
light_energy = 1.3
shadow_bias = 2.0
spot_range = 42.111
spot_attenuation = 0.993345
spot_angle = 70.3125
spot_angle_attenuation = 4.92458

[node name="SpotLight4" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 20.3708, 23.7995, -3.07204 )
light_energy = 1.3
shadow_bias = 2.0
spot_range = 42.111
spot_attenuation = 0.993345
spot_angle = 70.3125
spot_angle_attenuation = 4.92458

[node name="SpotLight2" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 20.3708, 44.9893, -3.07204 )
visible = false
layers = 524288
spot_range = 41.1
spot_attenuation = 0.0135119
spot_angle = 67.9
spot_angle_attenuation = 2.29739

[node name="SpotLight6" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 20.3708, 68.006, -3.07204 )
visible = false
layers = 524288
spot_range = 33.8651
spot_attenuation = 0.0135119
spot_angle = 83.6628
spot_angle_attenuation = 2.29739

[node name="SpotLight7" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 36.6258, 59.9067, 0.166283 )
visible = false
layers = 524288
spot_range = 15.1174
spot_attenuation = 0.0135119
spot_angle = 67.4305
spot_angle_attenuation = 2.29739

[node name="SpotLight8" type="SpotLight" parent="."]
transform = Transform( 0.478863, -0.866479, -0.141083, 0.282609, -3.35071e-08, 0.959235, -0.831157, -0.499214, 0.244875, 31.2669, 39.9546, 4.91081 )
visible = false
layers = 524288
light_energy = 0.5
spot_range = 15.1174
spot_attenuation = 0.0135119
spot_angle = 67.4305
spot_angle_attenuation = 2.29739

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.902473, 0.430747, 0, -0.430747, 0.902473, 20, 57.1298, 44.4103 )
environment = SubResource( 2 )
fov = 65.0
near = 27.69

[node name="Bed" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.774304, 0, 0.632814, 0, 1, 0, -0.632814, 0, -0.774304, 6.057, 4, 1.885 )

[node name="Chair" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.729172, 0, -0.684331, 0, 1, 0, 0.684331, 0, 0.729172, 36.3445, 4, 3.1739 )

[node name="Cabinet" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.819252, 0, 0.573433, 0, 1, 0, -0.573433, 0, 0.819252, 4.003, 28.6056, 0.866689 )

[node name="Bookcase" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.651185, 0, -0.75892, 0, 1, 0, 0.75892, 0, 0.651185, 35.06, 31, -1.09662 )

[node name="Couch" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.865256, 0, 0.50133, 0, 1, 0, -0.50133, 0, 0.865256, 3.249, 52.5754, -0.751148 )

[node name="Table" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.852175, 0, -0.523257, 0, 1, 0, 0.523257, 0, 0.852175, 37.035, 51.4644, 1.72493 )
script = ExtResource( 9 )
uid = 5

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MapButton" type="TextureButton" parent="CanvasLayer"]
anchor_left = 0.897
anchor_top = 0.174
anchor_right = 0.995
anchor_bottom = 0.341
margin_left = 2.07965
margin_top = 0.0494232
margin_right = 1.7276
margin_bottom = -0.150574
texture_normal = ExtResource( 15 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerAvatar" type="TextureRect" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 10
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FurnitureManager" parent="." instance=ExtResource( 8 )]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.951637, 0.307224, 0, -0.307224, 0.951637, 17.2859, 68.6151, 97.2576 )
visible = false
light_energy = 0.5

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer2"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -47.0
margin_right = 8.0
margin_bottom = 1.0
size_flags_horizontal = 6
size_flags_vertical = 6
max_value = 6.0
texture_under = ExtResource( 16 )
texture_progress = ExtResource( 13 )
radial_initial_angle = 108.4
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBarText" type="Label" parent="CanvasLayer2/TextureProgress"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -13.5
margin_right = 75.0
margin_bottom = 13.5
custom_fonts/font = ExtResource( 12 )
text = "X / 6 OBJETOS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer2"]

[connection signal="pressed" from="CanvasLayer/MapButton" to="CanvasLayer/MapButton" method="back_to_map"]
